--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hi this is Vanshika Goel</h1>
     <h1 id="root"></h1>
     <script
       crossorigin
