--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hi this is Vanshika Goel</h1>
-    <h1 id="root"></h1>
+    <div id="root"></div>
 
     <script type="module" src="app.js"></script>
   </body>
